--- a/resources/sass/components/_homepage.scss
+++ b/resources/sass/components/_homepage.scss
@@ -21,7 +21,7 @@
 
   hr {
     height: 40px;
-    width: 100vw;
+    width: 100%;
     margin-bottom: -1px;
     border: none;
   }
@@ -71,7 +71,7 @@
   .section {
     padding: 50px 0;
     display: flex;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
 
     &--info {
